package Algorithm;

//判断吃，碰，杠，胡，返回值到GameJFrame中调出按钮进行操作
public class Function {

}
