import Game.MenuJFrame;

import javax.swing.*;

public class App {
    public static void main(String[] args){
        SwingUtilities.invokeLater(() -> new MenuJFrame().setVisible(true));
    }
}
