@startuml

skinparam class {
    BackgroundColor Snow
    ArrowColor DimGray
    BorderColor DimGray
}

class MenuJFrame{

}

class GameJFrame {
    -container: Container;
    -landlord[]: JButton;
    -Card[]: JButton;
    -int: ZhuangFlag;
    -turn: int;
    -Zhuang: JLabel ;
    -currentList: ArrayList;
    -pokerList: ArrayList;
    -lordList: ArrayList;
    -time[]:JTextField
    - operation: PlayerOperation;
    -nextPlayer: boolean;
    +initGame():void
    +initView(): void
    +initJframe(): void
    +initCard(): void
    +actionPerformed: void
}

class MaJiang {

    -gameJFrame: GameJFrame
    -name: String
    -Up: boolean
    -Clickable: boolean
    -clicked: boolean
    +turnFront(): void
    +turnRear(): void
    +mouseClicked(e: MouseEvent): void

}

class Operation {
    - gameJFrame: GameJFrame
    - isRun: boolean
    - i: int

    + PlayerOperation(m: GameJFrame, i: int)
    + run(): void
    + sleep(i: int): void
    + setlord(i: int): void
    + turnOn(flag: boolean): void
    + computer0(): void
    + computer2(): void
    + getCardByName(list: List<Poker>, n: String): List
    + AI_3(model: List<String>, player: List<Poker>, list: List<String>, role: int): void
    + timeWait(n: int, player: int): void
    + win(): boolean
}

class App {
    +main(args: String[]): void
}


class Function{

}

MaJiang "1" -- "1" GameJFrame
App -- GameJFrame


@enduml